// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`agent sessionMode maps to default + workspaceWrite 1`] = `
{
  "approvalPolicy": "on-request",
  "collaborationMode": {
    "mode": "default",
    "settings": {
      "developer_instructions": null,
    },
  },
  "sandboxPolicy": "workspaceWrite",
}
`;

exports[`plan sessionMode maps to the built-in plan collaboration template 1`] = `
{
  "approvalPolicy": "on-request",
  "collaborationMode": {
    "mode": "plan",
    "settings": {
      "developer_instructions": null,
    },
  },
  "sandboxPolicy": "workspaceWrite",
}
`;

exports[`ask sessionMode maps to built-in default + readOnly 1`] = `
{
  "approvalPolicy": "on-request",
  "collaborationMode": {
    "mode": "default",
    "settings": {
      "developer_instructions": null,
    },
  },
  "sandboxPolicy": "readOnly",
}
`;
